Add sentry environment variables to worker image
For all worker environments.

Expose to Sentry also:

* deployment: dev, staging or production
* release: 2025-01.3 and similar

Signed-off-by: Evgeny Fedin <efedin@redhat.com>
Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/inventory/group_vars/testing_farm_staging_public_workers.yaml
+++ b/ansible/inventory/group_vars/testing_farm_staging_public_workers.yaml
@@ -1,6 +1,8 @@
 ---
+release: latest
+
 # container image with citool and modules
-citool_container_image: quay.io/testing-farm/worker-public:latest
+citool_container_image: "quay.io/testing-farm/worker-public:{{ release }}"
 
 # path to citool-config and jobs to deployment
 worker_deployment_data: "{{ root_dir }}/terragrunt/environments/staging/worker-public"
@@ -85,3 +87,6 @@ worker_resource_tags:
   ServicePhase: Stage
 
 worker_group_name: testing_farm_public_staging_workers
+
+sentry_base_url: "{{ credentials.sentry.public.base_url }}"
+sentry_dsn: "{{ credentials.sentry.public.dsn }}"
