--- a/ansible/inventory/group_vars/testing_farm_dev_public_workers.yaml
+++ b/ansible/inventory/group_vars/testing_farm_dev_public_workers.yaml
@@ -1,6 +1,8 @@
 ---
+release: latest
+
 # container image with citool and modules
-citool_container_image: quay.io/testing-farm/worker-public:latest
+citool_container_image: "quay.io/testing-farm/worker-public:{{ release }}"
 
 # path to citool-config and jobs to deployment
 worker_deployment_data: "{{ root_dir }}/terragrunt/environments/dev/worker-public"
@@ -88,3 +90,6 @@ worker_resource_tags:
   Developer: "{{ lookup('env', 'USER') }}"
 
 worker_group_name: testing_farm_public_dev_workers
+
+sentry_base_url: "{{ credentials.sentry.public.base_url }}"
+sentry_dsn: "{{ credentials.sentry.public.dsn }}"
