--- a/terragrunt/environments/dev/worker-public/citool-config/source-destination-map.yaml
+++ b/terragrunt/environments/dev/worker-public/citool-config/source-destination-map.yaml
@@ -40,11 +40,19 @@ progress:
 
 destroy:
   - source: "./*"
+    exclude:
+      - "^citool-debug.txt$"
+      - "^citool-debug.verbose.txt$"
     permissions: "777"
-
-  - source: "pipeline.log"
-    destination: pipeline.log
 
   # TFT-2413 - critical files to be present for our users
   - source: "results-junit.xml"
     verify: "true"
+
+  - source: "pipeline.log"
+    destination: pipeline.log
+
+  # This file should be uploaded as a last step to make sure that user's artifacts
+  # are not affected.
+  - source: "citool-debug.txt"
+  - source: "citool-debug.verbose.txt"
