--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,8 @@ workflow:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     # for schedules
     - if: $CI_PIPELINE_SOURCE == "schedule"
+    # for release tags
+    - if: $CI_COMMIT_TAG =~ /^release\/\d{4}\.\d{2}\.\d+$/
 
 .rules:
   not_default_branch:
@@ -133,6 +135,14 @@ workflow:
         - tests/worker/public/tmt*
         - tests/worker/public/sti*
 
+  only_release_tag:
+    - if: $CI_COMMIT_TAG !~ /^release\/\d{4}\.\d{2}\.\d+$/
+      when: never
+
+  not_tag:
+    - if: $CI_COMMIT_TAG
+      when: never
+
 direnv:
   stage: test
   before_script:
@@ -188,6 +198,7 @@ ansible-vault:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
     - !reference [.rules, secrets]
+    - !reference [.rules, not_tag]
 
 pre-commit:
   extends: .direnv
@@ -235,6 +246,7 @@ test/dev:
     - !reference [.rules, not_schedule]
     - !reference [.rules, ansible]
     - !reference [.rules, terragrunt_dev]
+    - !reference [.rules, not_tag]
 
 test/staging/pipeline:
   extends: [.direnv, .archive_tests]
@@ -269,6 +281,7 @@ test/staging/pipeline:
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_staging_ci]
     - !reference [.rules, public_pipeline_tests]
+    - !reference [.rules, not_tag]
 
 test/staging/pipeline/container:
   extends: [.direnv, .archive_tests]
@@ -287,6 +300,7 @@ test/staging/pipeline/container:
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_staging_ci]
     - !reference [.rules, public_pipeline_tests]
+    - !reference [.rules, not_tag]
 
 test/staging/compose:
   extends: [.direnv, .archive_tests]
@@ -321,6 +335,7 @@ test/staging/compose:
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_staging_ci]
     - !reference [.rules, public_compose_tests]
+    - !reference [.rules, not_tag]
 
 test/terraform/modules:
   extends: [.direnv]
@@ -333,6 +348,7 @@ test/terraform/modules:
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_modules_infra]
     - !reference [.rules, terragrunt_modules_testing_farm]
+    - !reference [.rules, not_tag]
 
 test/github:
   extends: .direnv
@@ -349,6 +365,7 @@ test/github:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_github]
+    - !reference [.rules, not_tag]
 
 test/infra:
   extends: .direnv
@@ -365,6 +382,7 @@ test/infra:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_infra]
+    - !reference [.rules, not_tag]
 
 test/staging:
   extends: .direnv
@@ -379,6 +397,7 @@ test/staging:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_staging]
+    - !reference [.rules, not_tag]
 
 test/production:
   extends: .direnv
@@ -410,6 +429,7 @@ redeploy/staging:
   rules:
     - !reference [.rules, only_default_branch]
     - !reference [.rules, only_schedule]
+    - !reference [.rules, not_tag]
     - if: '$SCHEDULED_JOB == "redeploy/staging"'
 
 cleanup/ci:
@@ -440,6 +460,7 @@ deploy/github:
     - !reference [.rules, only_default_branch]
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_github]
+    - !reference [.rules, not_tag]
 
 deploy/infra:
   extends: .direnv
@@ -455,6 +476,7 @@ deploy/infra:
     - !reference [.rules, only_default_branch]
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_infra]
+    - !reference [.rules, not_tag]
 
 deploy/staging:
   extends: .direnv
@@ -465,10 +487,12 @@ deploy/staging:
   variables:
     SCRIPT: >-
       make staging/apply
+      make staging/update/public/pipeline
   rules:
     - !reference [.rules, only_default_branch]
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_staging]
+    - !reference [.rules, not_tag]
 
 deploy/production:
   extends: .direnv
@@ -485,10 +509,26 @@ deploy/production:
     SCRIPT: >-
       make production/apply
   rules:
-    - !reference [.rules, only_default_branch]
+    - !reference [.rules, only_release_tag]
     - !reference [.rules, not_schedule]
     - !reference [.rules, terragrunt_production]
     - !reference [.rules, terragrunt_github]
+
+deploy/production/workers:
+  extends: .direnv
+  stage: deploy
+  needs:
+    - job: deploy/production
+      optional: false
+  script:
+    - !reference [.direnv, script]
+    - !reference [.script_with_cleanup, script]
+    - make update/pipeline/image
+    - make update/pipeline/config
+    - make update/pipeline/jobs
+  rules:
+    - !reference [.rules, only_release_tag]
+    - !reference [.rules, not_schedule]
 
 update/composes/public:
   extends: .direnv
