Do not merge: testing public compose update
Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -453,3 +453,6 @@ update/composes/public:
     - !reference [.direnv, script]
     - make compose/update/public
     - gitlab create-merge-request --title="Update public composes $(date -u --rfc-3339=date)"
+  # rules:
+  #   - !reference [.rules, only_schedule]
+  #   - if: '$SCHEDULED_JOB == "compose/update/public"'
