--- a/terragrunt/environments/staging/worker-public/citool-config/artemis-user-data.yaml
+++ b/terragrunt/environments/staging/worker-public/citool-config/artemis-user-data.yaml
@@ -8,3 +8,7 @@ BusinessUnit: >-
   {% else %}
     unknown
   {% endif %}
+TestingFarmRequestTimeout: >-
+  {% if TESTING_FARM_REQUEST_TIMEOUT %}
+    {{ TESTING_FARM_REQUEST_TIMEOUT }}
+  {% endif %}
