--- a/terragrunt/environments/staging/worker-local/citool-config/guest-setup/pre-artifact-installation/workaround-automotive.yaml
+++ b/terragrunt/environments/staging/worker-local/citool-config/guest-setup/pre-artifact-installation/workaround-automotive.yaml
@@ -1,34 +1,35 @@
+---
 #
-# Various workarounds for Automotive
+# Various workarounds for Automotive:
 #
-# * fix yum repositories, seems $stream is not expanded correctly
-# * install rsync, because tmt requires it ...
+# * install rsync, because tmt requires it, and because RHIVOS has no repos, install it from URL
 #
 
 - block:
-    - name: Fix unexpanded $stream in yum repositories
-      shell: "sed -i 's/$stream/9-stream/' /etc/yum.repos.d/*"
+    - name: Install rsync
+      package:
+        name: rsync
+        state: present
 
-    - name: "Check if 'rsync' package is already present"
+  when:
+    - '"auto-osbuild" in IMAGE_NAME|lower'
+    - '"ostree" not in IMAGE_NAME|lower'
+
+- block:
+    - name: Check if 'rsync' package is already present
       command: rpm -q rsync
       register: rsync_package_check
       changed_when: false
       ignore_errors: true
 
     - name: Install rsync via rpm-ostree
-      command: "rpm-ostree install rsync"
+      shell: "rpm-ostree install --apply-live http://download.eng.bos.redhat.com/brewroot/vol/rhel-9/packages/rsync/3.2.3/16.el9/$(arch)/rsync-3.2.3-16.el9.$(arch).rpm"
       when: rsync_package_check is failed
       retries: "{{ pkg_retry_count }}"
       delay: "{{ pkg_retry_delay }}"
       until: result_package is succeeded
       register: result_package
 
-    - name: Restart
-      reboot:
-
-    - name: Wait for connection for 5 minutes
-      wait_for_connection:
-        delay: 5
-        timeout: 300
-
-  when: '"auto-osbuild" in IMAGE_NAME|lower'
+  when:
+    - '"auto-osbuild" in IMAGE_NAME|lower'
+    - '"ostree" in IMAGE_NAME|lower'
