--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -155,6 +155,7 @@ direnv:
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
+    - !reference [.rules, not_tag]
 
 .direnv:
   before_script:
@@ -211,6 +212,7 @@ pre-commit:
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
+    - !reference [.rules, not_tag]
     - when: always
 
 test/dev:
@@ -346,9 +348,9 @@ test/terraform/modules:
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
+    - !reference [.rules, not_tag]
     - !reference [.rules, terragrunt_modules_infra]
     - !reference [.rules, terragrunt_modules_testing_farm]
-    - !reference [.rules, not_tag]
 
 test/github:
   extends: .direnv
@@ -364,8 +366,8 @@ test/github:
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
-    - !reference [.rules, terragrunt_github]
     - !reference [.rules, not_tag]
+    - !reference [.rules, terragrunt_github]
 
 test/infra:
   extends: .direnv
@@ -381,8 +383,8 @@ test/infra:
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
-    - !reference [.rules, terragrunt_infra]
     - !reference [.rules, not_tag]
+    - !reference [.rules, terragrunt_infra]
 
 test/staging:
   extends: .direnv
@@ -396,8 +398,8 @@ test/staging:
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
-    - !reference [.rules, terragrunt_staging]
     - !reference [.rules, not_tag]
+    - !reference [.rules, terragrunt_staging]
 
 test/production:
   extends: .direnv
@@ -412,6 +414,7 @@ test/production:
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
+    - !reference [.rules, not_tag]
     - !reference [.rules, terragrunt_production]
 
 redeploy/staging:
@@ -459,8 +462,8 @@ deploy/github:
   rules:
     - !reference [.rules, only_default_branch]
     - !reference [.rules, not_schedule]
-    - !reference [.rules, terragrunt_github]
     - !reference [.rules, not_tag]
+    - !reference [.rules, terragrunt_github]
 
 deploy/infra:
   extends: .direnv
@@ -475,8 +478,8 @@ deploy/infra:
   rules:
     - !reference [.rules, only_default_branch]
     - !reference [.rules, not_schedule]
-    - !reference [.rules, terragrunt_infra]
     - !reference [.rules, not_tag]
+    - !reference [.rules, terragrunt_infra]
 
 deploy/staging:
   extends: .direnv
@@ -491,8 +494,8 @@ deploy/staging:
   rules:
     - !reference [.rules, only_default_branch]
     - !reference [.rules, not_schedule]
-    - !reference [.rules, terragrunt_staging]
     - !reference [.rules, not_tag]
+    - !reference [.rules, terragrunt_staging]
 
 deploy/production:
   extends: .direnv
@@ -511,8 +514,7 @@ deploy/production:
   rules:
     - !reference [.rules, only_release_tag]
     - !reference [.rules, not_schedule]
-    - !reference [.rules, terragrunt_production]
-    - !reference [.rules, terragrunt_github]
+    - when: always
 
 deploy/production/workers:
   extends: .direnv
