--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -484,6 +484,7 @@ deploy/production/workers:
   rules:
     - !reference [.rules, only_release_tag]
     - !reference [.rules, not_schedule]
+    - when: always
 
 update/composes/public:
   extends: .direnv
