--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ workflow:
     # for schedules
     - if: $CI_PIPELINE_SOURCE == "schedule"
     # for release tags
-    - if: '$CI_COMMIT_TAG =~ /^release\/\d{4}\.\d{2}\.\d+$/'
+    - if: $CI_COMMIT_TAG =~ /^release\/\d{4}\.\d{2}\.\d+$/
 
 .rules:
   not_default_branch:
@@ -136,7 +136,7 @@ workflow:
         - tests/worker/public/sti*
 
   only_release_tag:
-    - if: '$CI_COMMIT_TAG !~ /^release\/\d{4}\.\d{2}\.\d+$/'
+    - if: $CI_COMMIT_TAG !~ /^release\/\d{4}\.\d{2}\.\d+$/
       when: never
 
   not_tag:
