workers: set worker hostname to EC2 machine name in AWS
Getting tired finding out which noamd client is the one in AWS?
With this patch the client name will be the same as the EC2 machine
name making it easy to identify the correct worker.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/playbooks/create-public-worker.yaml
+++ b/ansible/playbooks/create-public-worker.yaml
@@ -91,6 +91,7 @@
     - ../secrets/credentials.yaml
     - ../vars/common.yaml
   pre_tasks:
+    - import_tasks: ../tasks/hostname.yaml
     - import_tasks: ../tasks/dns.yaml
     - import_tasks: ../tasks/ssh-key.yaml
     - import_tasks: ../tasks/artifacts.yaml
