--- a/ansible/playbooks/create-redhat-worker.yaml
+++ b/ansible/playbooks/create-redhat-worker.yaml
@@ -46,12 +46,14 @@
       add_host:
         hostname: "{{ item.private_ip_address }}"
         groupname: testing_farm_redhat_workers
+        workername: "{{ hostname }}"
       loop: "{{ ec2.instances }}"
 
     - name: Add new instance to host group
       add_host:
         hostname: "{{ item.private_ip_address }}"
         groupname: new_workers
+        workername: "{{ hostname }}"
       loop: "{{ ec2.instances }}"
 
 #
@@ -92,6 +94,8 @@
   pre_tasks:
     - import_tasks: ../tasks/rh-certs.yaml
     - import_tasks: ../tasks/hostname.yaml
+      vars:
+        hostname: "{{ hostvars[inventory_hostname]['workername'] }}"
     - import_tasks: ../tasks/dns.yaml
     - import_tasks: ../tasks/ssh-key.yaml
     - import_tasks: ../tasks/podman.yaml
