add report-portal module to dev and staging

--- a/tests/worker/base-scenarios/base-tmt-container_pipeline.yaml
+++ b/tests/worker/base-scenarios/base-tmt-container_pipeline.yaml
@@ -11,6 +11,7 @@ variables:
 pipeline: |
   rules-engine
   hide-secrets
+  reportportal
   testing-farm-request --request-id {{ REQUEST_ID }}
   coldstore
   testing-farm-request-state-reporter
