--- a/tests/worker/base-scenarios/base-tmt-multihost_pipeline.yaml
+++ b/tests/worker/base-scenarios/base-tmt-multihost_pipeline.yaml
@@ -8,6 +8,7 @@ variable:
 pipeline: |
   rules-engine
   hide-secrets
+  reportportal
   testing-farm-request --request-id {{ REQUEST_ID }}
   coldstore
   testing-farm-request-state-reporter
