--- a/tests/worker/base-scenarios/base-tmt_pipeline.yaml
+++ b/tests/worker/base-scenarios/base-tmt_pipeline.yaml
@@ -8,6 +8,7 @@ variable:
 pipeline: |
   hide-secrets
   rules-engine
+  reportportal
   testing-farm-request --request-id {{ REQUEST_ID }}
   archive
   coldstore
