--- a/tests/worker/public/tmt-x86_64-fedora-copr-build.yaml
+++ b/tests/worker/public/tmt-x86_64-fedora-copr-build.yaml
@@ -10,6 +10,7 @@ variables:
 pipeline: |
   hide-secrets
   rules-engine
+  reportportal
   testing-farm-request --request-id {{ REQUEST_ID }}
   ansible
   artemis
