--- a/tests/worker/public/tmt-empty-plan-x86_64.yaml
+++ b/tests/worker/public/tmt-empty-plan-x86_64.yaml
@@ -42,6 +42,7 @@ checks:
         </logs>
         <properties>
          <property name="baseosci.result" value="skipped"/>
+         <property name="id" value="work-empty{{ '.+' }}_testing-farm-empty"/>
         </properties>
         <testing-environment name="requested">
          <property name="arch" value="{{ ARCH }}"/>
