--- a/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
+++ b/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
@@ -38,10 +38,12 @@ checks:
         </logs>
         <properties>
          <property name="baseosci.result" value="passed"/>
+         <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic"/>
         </properties>
         <testcase name="/server-setup/testing-farm/tests/multihost/A" result="passed" time="{{ '\d+' }}" start-time="{{ timestamp_pattern }}" end-time="{{ timestamp_pattern }}" serial-number="1">
          <properties>
           <property name="contact" value="Testing Farm Contact &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_1_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/server/server-setup/testing-farm/tests/multihost/A-1/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
@@ -61,6 +63,7 @@ checks:
          <properties>
           <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
           <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_2_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ '(server|client)' }}/tests/testing-farm/tests/multihost/B-2/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
@@ -80,6 +83,7 @@ checks:
          <properties>
           <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
           <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_2_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ '(server|client)' }}/tests/testing-farm/tests/multihost/B-2/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
@@ -99,6 +103,7 @@ checks:
          <properties>
           <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
           <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_3_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ '(server|client)' }}/tests/testing-farm/tests/multihost/C-3/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
@@ -118,6 +123,7 @@ checks:
          <properties>
           <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
           <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_3_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ '(server|client)' }}/tests/testing-farm/tests/multihost/C-3/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
@@ -158,10 +164,12 @@ checks:
         </logs>
         <properties>
          <property name="baseosci.result" value="passed"/>
+         <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic"/>
         </properties>
         <testcase name="/server-setup/testing-farm/tests/multihost/A" result="passed" time="{{ '\d+' }}" start-time="{{ timestamp_pattern }}" end-time="{{ timestamp_pattern }}" serial-number="1">
          <properties>
           <property name="contact" value="Testing Farm Contact &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_1_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/server/server-setup/testing-farm/tests/multihost/A-1/data" name="data" schedule-entry="{{ COMPOSE }}:aarch64:{{ PLAN }}" schedule-stage="running"/>
@@ -181,6 +189,7 @@ checks:
          <properties>
           <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
           <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_2_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ '(server|client)' }}/tests/testing-farm/tests/multihost/B-2/data" name="data" schedule-entry="{{ COMPOSE }}:aarch64:{{ PLAN }}" schedule-stage="running"/>
@@ -200,6 +209,7 @@ checks:
          <properties>
           <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
           <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_2_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ '(server|client)' }}/tests/testing-farm/tests/multihost/B-2/data" name="data" schedule-entry="{{ COMPOSE }}:aarch64:{{ PLAN }}" schedule-stage="running"/>
@@ -219,6 +229,7 @@ checks:
          <properties>
           <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
           <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_3_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ '(server|client)' }}/tests/testing-farm/tests/multihost/C-3/data" name="data" schedule-entry="{{ COMPOSE }}:aarch64:{{ PLAN }}" schedule-stage="running"/>
@@ -238,6 +249,7 @@ checks:
          <properties>
           <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
           <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+          <property name="id" value="work-basic{{ '.+' }}_testing-farm-multihost-basic_3_{{ '(server|client)' }}"/>
          </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ '(server|client)' }}/tests/testing-farm/tests/multihost/C-3/data" name="data" schedule-entry="{{ COMPOSE }}:aarch64:{{ PLAN }}" schedule-stage="running"/>
@@ -315,6 +327,7 @@ checks:
           HOME: /root
           PYTHONUNBUFFERED: 1
           PODMAN_IGNORE_CGROUPSV1_WARNING: 1
+          TMT_PLUGIN_REPORT_REPORTPORTAL_LINK_TEMPLATE: {{ artifacts_url_pattern }}/{{ REQUEST_ID }}/#work-basic{{ '[a-zA-Z0-9_-]+' }}_{{ '{{' }} PLAN_NAME {{ '}}' }}_{{ '{{' }} RESULT.serial_number {{ '}}' }}_{{ '{{' }} RESULT.guest.name {{ '}}' }}
           POLARION_PASSWORD: hidden
           POLARION_USERNAME: user
           LC_CTYPE: C.UTF-8
