--- a/tests/worker/public/tmt-x86_64.yaml
+++ b/tests/worker/public/tmt-x86_64.yaml
@@ -28,6 +28,7 @@ checks:
           HOME: /root
           PYTHONUNBUFFERED: 1
           PODMAN_IGNORE_CGROUPSV1_WARNING: 1
+          TMT_PLUGIN_REPORT_REPORTPORTAL_LINK_TEMPLATE: {{ artifacts_url_pattern }}/{{ REQUEST_ID }}/#work-sanity{{ '[a-zA-Z0-9_-]+' }}_{{ '{{' }} PLAN_NAME {{ '}}' }}_{{ '{{' }} RESULT.serial_number {{ '}}' }}_{{ '{{' }} RESULT.guest.name {{ '}}' }}
           POLARION_PASSWORD: hidden
           POLARION_USERNAME: user
           LC_CTYPE: C.UTF-8
