--- a/ansible/inventory/redhat_aws_ec2.yaml
+++ b/ansible/inventory/redhat_aws_ec2.yaml
@@ -15,6 +15,7 @@ boto_profile: redhat_us_east_1_ansible_inventory
 include_filters:
   - tag:Name:
       - "testing_farm_worker_*"
+      - "testing-farm-worker-*"
 
 hostnames:
   - "tag:Name"
